--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -53,6 +53,8 @@ http {
     server {
         listen 80;
         server_name _;
+        
+        root /var/www/perfectpoint/public;
 
         location / {
             proxy_pass http://localhost:3000;
@@ -60,6 +62,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /environment.js {
+            try_files $uri =404;
         }
 
         access_log /var/log/nginx/access.log;
